incorporated feedback; beefed up image section

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -18,13 +18,13 @@ Gatsby and Astro share some similarities that will help you migrate your project
 
 - The syntax of `.astro` files is similar to JSX. Writing Astro should feel familiar.
 
-- Astro has built-in support for Markdown and an integration for using MDX files. Both Gatsby and Astro use [Remark](https://remark.js.org/) by default for Markdown manipulation and pre-processing, so you can continue to use many of your existing Remark plugins.
+- Astro has built-in support for Markdown and an integration for using MDX files. Also, you can configure and continue to use many of your existing [Markdown plugins](/en/guides/markdown-content/#configuring-markdown-and-mdx).
 
 - Astro also has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
 
 - Astro has support for installing NPM packages, including several for React. You may be able to keep some or all of your existing React components and dependencies.
 
-- Astro projects can also be SSG or SSR. (Support for per-page rendering strategy is planned.)
+- Astro projects can also be SSG or [SSR](/en/guides/server-side-rendering/). (Support for per-page rendering strategy is planned.)
 
 ## Key Differences between Gatsby and Astro
 
@@ -76,7 +76,7 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 - **@astrojs/react**: to reuse some existing React UI components in your new Astro site, or keep writing with React components.
 
-- **@astrojs/image**: to replace Gatsby's Image plugin with Astro's own image-optimizing components.
+- **@astrojs/image**: to replace Gatsby's Image plugin with Astro's own image-optimizing components. (Experimental: works in `.astro` files only.)
 
 - **@astrojs/mdx**: to bring existing MDX files from your Gatsby project, or to use MDX in your new Astro site.
 
@@ -90,7 +90,7 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
     Astro uses a folder called `public/` for static assets. You can alternatively copy the contents of `static/` into an existing Astro `public/` folder.
 
-3. **Copy or Move** Gatsby's other files and folders (e.g. `components`, `pages` etc.) into Astro's `src/` folder.
+3. **Copy or Move** Gatsby's other files and folders (e.g. `components`, `pages` etc.) into Astro's `src/` folder (incrementally, as you build your site).
 
   Astro's `src/pages/` folder is a special folder used for file-based routing to create your site's pages and posts from `.astro`, `.md` and `.mdx` files. You will not have to configure any routing behavior for your Astro, Markdown and MDX files.
 
@@ -304,9 +304,13 @@ Global styling is achieved in Gatsby using CSS imports in `gatsby-browser.js`. I
 
 ### Gatsby Image Plugin to Astro
 
-Convert Gatsby's `<StaticImage />` and `<GatsbyImage />` components with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>` tag.
+Convert Gatsby's `<StaticImage />` and `<GatsbyImage />` components with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>` / JSX `<img />` tag as appropriate.
 
-To continue using local images in Markdown using standard Markdown syntax (`![]()`), move your images into your `public/` folder. You may need to update the link to the relative URL.
+Astro's `<Image />` and `<Picture />` components are experimental, and currently work in `.astro` and `.mdx` files only. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for these components, and note that several will differ from Gatsby's attributes. Also, there is no standard configuration and attributes must be added to each component individually. For greater flexibility you can [build your own image component](/en/guides/images/#setting-default-values) to configure reusable image components with default attributes and styling.
+
+To continue using local images in Markdown using standard Markdown syntax (`![]()`), move your images into your `public/` folder. You may need to update the link to the relative URL. You can also use the standard `<img>` tag.  Note that these [images in `public/` will not be optimized by Astro](/en/guides/images/#public).
+
+In React (`.jsx`) components, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
 
 You can learn more about [using images in Astro](/en/guides/images/) in the Images Guide.
 
