changed `api()` to `ghostClient()` on `ghost.ts`; changed the imports to just be `ghost`

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -92,7 +92,7 @@ This example will create an index page that lists posts with links to dynamicall
 
 You can fetch your site's data with the Ghost content API package.
 
-First, create an `ghost.ts` file under a `lib` directory.
+First, create a `ghost.ts` file under a `lib` directory.
 
 <FileTree title="Project Structure">
 - src/
@@ -111,8 +111,8 @@ Initialize an API instance with the Ghost API using the API key from the Ghost d
 import GhostContentAPI from '@tryghost/content-api';
 
 // Create API instance with site credentials
-export const api = new GhostContentAPI({
-    url: 'http://localhost:2368', // This is the URL if your site is running on a local environment
+export const ghostClient = new GhostContentAPI({
+    url: 'http://localhost:2368', // This is the default URL if your site is running on a local environment
     key: import.meta.env.CONTENT_API_KEY,
     version: 'v5.0',
 });
@@ -134,12 +134,12 @@ The page `src/pages/index.astro` will display a list of posts, each with a descr
 - package.json
 </FileTree>
 
-Import the API in the Astro frontmatter to use the `posts.browse()` method to access blog posts from Ghost. Set `limit: all` to retrieve all posts.
+Import `ghostClient()` in the Astro frontmatter to use the `posts.browse()` method to access blog posts from Ghost. Set `limit: all` to retrieve all posts.
 
 ```astro title="src/pages/index.astro"
 ---
-import { api } from '../lib/ghost.ts';
-const posts = await api.posts
+import { ghostClient } from '../lib/ghost';
+const posts = await ghostClient.posts
     .browse({
         limit: 'all',
     })
@@ -159,8 +159,8 @@ Use the `posts` array returned from the fetch to display a list of blog posts on
 
 ```astro title="src/pages/index.astro"
 ---
-import { api } from '../lib/api';
-const posts = await api.posts
+import { ghostClient } from '../lib/ghost';
+const posts = await ghostClient.posts
     .browse({
         limit: 'all',
     })
@@ -202,14 +202,14 @@ The page `src/pages/post/[slug].astro` [dynamically generates a page](/en/core-c
 - package.json
 </FileTree>
 
-Import the API to access blog posts using `posts.browse()` and return a post as props to each of your dynamic routes. 
+Import `ghostClient()` to access blog posts using `posts.browse()` and return a post as props to each of your dynamic routes. 
 
 ```astro title="src/pages/post/[slug].astro"
 ---
-import { api } from '../../lib/ghost';
+import { ghostClient } from '../../lib/ghost';
 
 export async function getStaticPaths() {
-    const posts = await api.posts
+    const posts = await ghostClient.posts
         .browse({
             limit: 'all',
         })
@@ -237,9 +237,9 @@ Create the template for each page using the properties of each `post` object.
 
 ```astro title="src/pages/post/[slug].astro" ins={24-37}
 ---
-import { api } from '../../lib/ghost.ts';
+import { ghostClient } from '../../lib/ghost';
 export async function getStaticPaths() {
-    const posts = await api.posts
+    const posts = await ghostClient.posts
         .browse({
             limit: 'all',
         })
