--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -137,7 +137,7 @@ let counter = 0
 
 if(Astro.cookies.has("counter")){
   const cookie = Astro.cookies.get("counter")
-	counter = parseInt(cookie.value) + 1
+	counter = cookie.number() + 1
 }
 
 Astro.cookies.set("counter",counter)
