--- a/src/pages/en/migrate.mdx
+++ b/src/pages/en/migrate.mdx
@@ -95,7 +95,7 @@ When upgrading, please visually inspect your site output to make sure everything
 
 Astro no longer supports components or JSX expressions in Markdown pages by default. For long-term support you should migrate to the [`@astrojs/mdx`](/en/guides/integrations-guide/mdx/) integration.
 
-To make migrating easier, a new [legacy flag](/en/reference/configuration-reference/#legacyastroflavoredmarkdown) can be used to re-enable previous Markdown features.
+To make migrating easier, a new `legacy.astroFlavoredMarkdown` flag can be used to re-enable previous Markdown features.
 
 ### Converting existing `.md` files to `.mdx`
 
@@ -153,7 +153,7 @@ If you're not familiar with MDX, here are some steps you can follow to quickly c
     ```
 
 :::tip
-While you are transitioning to MDX, you may wish to [enable the legacy flag](/en/reference/configuration-reference/#legacyastroflavoredmarkdown) and include both **`.md` and `.mdx`** files, so that your site continues to function normally even before all your files have been converted. Here is one way you can do that:
+While you are transitioning to MDX, you may wish to enable the `legacy.astroFlavoredMarkdown` flag and include both **`.md` and `.mdx`** files, so that your site continues to function normally even before all your files have been converted. Here is one way you can do that:
 
 ```astro
 ---
