--- a/src/pages/en/migrate.mdx
+++ b/src/pages/en/migrate.mdx
@@ -2,7 +2,7 @@
 layout: ~/layouts/MainLayout.astro
 title: Migration Guide
 description: How to migrate your project to latest version of Astro.
-i18nReady: true
+i18nReady: false
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
