Remove AFMD links from Russian MD content page

--- a/src/pages/ru/guides/markdown-content.mdx
+++ b/src/pages/ru/guides/markdown-content.mdx
@@ -257,7 +257,7 @@ Astro v1.0 **поддерживает только стандартный Markdo
 Возможность использовать [компоненты или JSX в Markdown страницах более не включен по умолчанию](/ru/migrate/#deprecated-components-and-jsx-in-markdown)
 и поддержка в конечном итоге будет полностью удалена. 
 
-Конфиг Astro поддерживает [устаревший флаг](/ru/reference/configuration-reference/#legacyastroflavoredmarkdown), который
+Конфиг Astro поддерживает устаревший флаг `legacy.astroFlavoredMarkdown`, который
 повторно включит эти функции на страницах Markdown, пока вы не сможете перейти на MDX в Astro.
 Интеграция MDX в Astro - рекомендуемый вариант, если вам нужно больше возможностей, чем предоставляет стандартный Markdown.
 :::
@@ -366,7 +366,7 @@ If you plan to use `rawContent` for calculating values like "reading time," we s
 Только сам документ markdown будет возвращен в формате HTML.
 
 :::caution
-**[Для пользователей `legacy.astroFlavoredMarkdown`](/ru/reference/configuration-reference/#legacyastroflavoredmarkdown):** 
+**Для пользователей `legacy.astroFlavoredMarkdown`:** 
 Это не парсит `{jsx выражения}` или `<Components />`.
 Только стандартные Markdown блоки, такие как `## headings` и `- lists`, будут спарсены в HTML.
 :::
