--- a/src/pages/en/migrate.mdx
+++ b/src/pages/en/migrate.mdx
@@ -95,7 +95,7 @@ When upgrading, please visually inspect your site output to make sure everything
 
 Astro no longer supports components or JSX expressions in Markdown pages by default. For long-term support you should migrate to the [`@astrojs/mdx`](/en/guides/integrations-guide/mdx/) integration.
 
-To make migrating easier, a new `legacy.astroFlavoredMarkdown` flag can be used to re-enable previous Markdown features.
+To make migrating easier, a new `legacy.astroFlavoredMarkdown` flag (removed in v2.0) can be used to re-enable previous Markdown features.
 
 ### Converting existing `.md` files to `.mdx`
 
