--- a/src/pages/en/reference/errors/mdx-integration-missing-error.mdx
+++ b/src/pages/en/reference/errors/mdx-integration-missing-error.mdx
@@ -14,9 +14,7 @@ import DontEditWarning from '../../../../components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **MdxIntegrationMissingError**: 
-            return `Unable to render J_S_O_N.STRINGIFY(ID). Ensure that the `@astrojs/mdx` integration is installed.`;
-         (E06004)
+> **MdxIntegrationMissingError**: Unable to render FILE. Ensure that the `@astrojs/mdx` integration is installed. (E06004)
 
 ## What went wrong?
 Unable to find the official `@astrojs/mdx` integration. This error is raised when using MDX files without an MDX integration installed.
