include info about content colletions in both

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -76,9 +76,22 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 - **@astrojs/react**: to reuse some existing React UI components in your new Astro site, or keep writing with React components.
 
-- **@astrojs/image**: to replace Gatsby's Image plugin with Astro's own image-optimizing components. (Experimental: works in `.astro` files only.)
+- **@astrojs/image**: to replace Gatsby's Image plugin with Astro's own image-optimizing components. (Experimental: works in `.astro` and `.mdx` files only.)
 
 - **@astrojs/mdx**: to bring existing MDX files from your Gatsby project, or to use MDX in your new Astro site.
+
+### Repurpose config files
+
+Gatsby has several top-level configuration files that also include site and page metadata and are used for routing. You will not use any of these `gatsby-*.js` files in your Astro project, but there may be some content that you can reuse:
+
+- `gatsby-config.js`: Move your `siteMetadata: {}` into `src/data/siteMetadata.js` (or `siteMetadata.json`) to import data about your site (title, description, social accounts etc.) into page layouts.
+
+- `gatsby-browser.js`: Consider adding anything used here directly into your main layout's `<head>` tag.
+
+- `gatsby-node.js`: You will not need to create your own nodes in Astro, but viewing the schema in this file may help you with defining types in your Astro project.
+
+- `gatsby-ssr.js`: If you choose to use SSR in Astro, you will add and configure the adapter of your choice directly in `astro.config.mjs`.
+
 
 ### Put your code in `src`
 
@@ -88,25 +101,14 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 2. **Rename** Gatsby's `static/` folder to `public/`, and use it as Astro's `public/` folder. 
 
-    Astro uses a folder called `public/` for static assets. You can alternatively copy the contents of `static/` into an existing Astro `public/` folder.
+    Astro uses a folder called `public/` for static assets. You can alternatively copy the contents of `static/` into your existing Astro `public/` folder.
 
-3. **Copy or Move** Gatsby's other files and folders (e.g. `components`, `pages` etc.) into Astro's `src/` folder (incrementally, as you build your site).
+3. **Copy or Move** Gatsby's other files and folders (e.g. `components`, `pages` etc.) as needed into your Astro `src/` folder as you rebuild your site, following [Astro's project structure](/en/core-concepts/project-structure/).
 
   Astro's `src/pages/` folder is a special folder used for file-based routing to create your site's pages and posts from `.astro`, `.md` and `.mdx` files. You will not have to configure any routing behavior for your Astro, Markdown and MDX files.
 
   All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, `src/scripts`.
 
-### Repurpose config files
-
-Gatsby has several top-level configuration files for configuration options, site and page metadata and generating page routes. You will not use any of these `gatsby-*.js` files in your Astro project, but there may be some content that you can reuse:
-
-- `gatsby-config.js`: Move your `siteMetadata: {}` into `src/data/siteMetadata.js` (or `siteMetadata.json`) to import data about your site (title, description, social accounts etc.) into page layouts.
-
-- `gatsby-browser.js`: Consider adding anything used here directly into your main layout's `<head>` tag.
-
-- `gatsby-node.js`: You will not need to create your own nodes in Astro, but viewing the schema in this file may help you with defining types in your Astro project.
-
-- `gatsby-ssr.js`: If you choose to use SSR in Astro, you will add and configure the adapter of your choice directly in `astro.config.mjs`.
 
 ### Convert JSX files to `.astro` files
 
@@ -249,17 +251,20 @@ You may also wish to reuse code from Gatsby's `src/components/seo.js` to include
 
 In Gatsby, your pages and posts may exist in `src/pages/` or outside of `src` in another folder, like `content`.
 
-In Astro, **your pages must live within `src/pages/`**. You will not have to configure any routing behavior for your Astro, Markdown and MDX files.
+In Astro, **all your page content must live within `src/`**.
+
 
 #### React Pages
 
-Your existing Gatsby JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files). 
+Your existing Gatsby JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files). You cannot use an existing JSX page file in Astro.
+
+These `.astro` pages must be located within `src/pages/` and will have page routes generated automatically based on their file path.
 
 #### Markdown and MDX pages
 
-Your existing Markdown and MDX files can also exist here as pages, but may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts).
+Your existing Markdown and MDX files can be reused, but may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). They can also be placed within `src/pages/` to take advantage of automatic file-based routing.
 
-With dynamic routing, your Markdown posts may exist outside of `src/pages/` but they should still be kept within your project source folder (e.g. `src/posts/`) so that the dynamic page file (e.g. `src/pages/blog/[slug].astro` can import their data.)
+When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
 
 ### Migrating Tests
 
