Replace `||` syntax with direct `<Spoiler>` use

--- a/src/pages/en/tutorial/2-pages/3.mdx
+++ b/src/pages/en/tutorial/2-pages/3.mdx
@@ -6,6 +6,7 @@ description: |-
   Use variables and conditional rendering on your Astro pages
 ---
 import Checklist from '~/components/Checklist.astro';
+import Spoiler from '~/components/Spoiler.astro';
 import Blanks from '~/components/tutorial/Blanks.astro';
 import Box from '~/components/tutorial/Box.astro';
 import MultipleChoice from '~/components/tutorial/MultipleChoice.astro';
@@ -240,19 +241,27 @@ For each Astro template expression, can you predict the HTML (if any!) that will
 
 1.  `<p>{operatingSystem}</p>`
 
-    ||  `<p>Linux</p>` ||
+    <p>
+      <Spoiler>`<p>Linux</p>`</Spoiler>
+    </p>
 
 2.  `{student && <p>I am still in school.</p>}`
 
-    || Nothing will display because `student` evaluates to false. ||
+    <p>
+      <Spoiler>Nothing will display because `student` evaluates to false.</Spoiler>
+    </p>
 
 3.  `<p>I have {quantity + 8} pairs of {footwear}</p>`
 
-    ||  `<p>I have 11 pairs of boots</p>` ||
+    <p>
+      <Spoiler>`<p>I have 11 pairs of boots</p>`</Spoiler>
+    </p>
 
 4.  `{operatingSystem === "MacOS" ? <p>I am using a Mac.</p> : <p>I am not using a Mac.</p>}`
 
-    || `<p>I am not using a Mac.</p>` ||
+    <p>
+      <Spoiler>`<p>I am not using a Mac.</p>`</Spoiler>
+    </p>
 </Box>
 
 ## Checklist
