--- a/src/pages/en/tutorial/2-pages/4.mdx
+++ b/src/pages/en/tutorial/2-pages/4.mdx
@@ -7,6 +7,7 @@ description: |-
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
+import Spoiler from '~/components/Spoiler.astro';
 import Box from '~/components/tutorial/Box.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
@@ -45,11 +46,11 @@ Using Astro's own `<style></style>` tags, you can style items on your page. Addi
     
     - Which color is the page title of:
 
-        - Your Home page?  ||black||
-        - Your About page? ||purple||
-        - Your Blog page? ||black||
+        - Your Home page?  <Spoiler>black</Spoiler>
+        - Your About page? <Spoiler>purple</Spoiler>
+        - Your Blog page? <Spoiler>black</Spoiler>
 
-    - The page with the biggest title text is? ||Your About page||
+    - The page with the biggest title text is? <Spoiler>Your About page</Spoiler>
 
     :::tip
     If you are unable to determine colors visually, you can use the dev tools in your browser to inspect the `<h1>` title elements and verify the text color applied.
