--- a/src/pages/en/tutorial/6-islands/1.mdx
+++ b/src/pages/en/tutorial/6-islands/1.mdx
@@ -7,6 +7,7 @@ description: |-
 ---
 import Box from '~/components/tutorial/Box.astro';
 import Checklist from '~/components/Checklist.astro';
+import Spoiler from '~/components/Spoiler.astro';
 import MultipleChoice from '~/components/tutorial/MultipleChoice.astro';
 import Option from '~/components/tutorial/Option.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
@@ -140,15 +141,21 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
 
 1. Which of the five components will be **hydrated** islands, sending JavaScript to the client?
 
-    || `<PreactBanner client:load />` and `<SvelteCounter client:visible />` will be hydrated islands. ||
+    <p>
+      <Spoiler>`<PreactBanner client:load />` and `<SvelteCounter client:visible />` will be hydrated islands.</Spoiler>
+    </p>
 
 2. In what way(s) will the two `<PreactBanner />` components be the same? In what way(s) will they be different? 
 
-  || **Same**: They both show the same HTML elements and look the same initially. **Different**: The component with the `client:load` directive will rerender after the page is loaded, and any interactive elements that it has will work. ||
+    <p>
+      <Spoiler>**Same**: They both show the same HTML elements and look the same initially. **Different**: The component with the `client:load` directive will rerender after the page is loaded, and any interactive elements that it has will work.</Spoiler>
+    </p>
 
 3. Assume the `SvelteCounter` component shows a number and has a button to increase it. If you couldn't see your website's code, only the live published page, how would you tell which of the two `<SvelteCounter />` component used `client:visible`? 
 
-    || Try clicking the button, and see which one is interactive. If it responds to your input, it must have had a `client:` directive. ||
+    <p>
+      <Spoiler>Try clicking the button, and see which one is interactive. If it responds to your input, it must have had a `client:` directive.</Spoiler>
+    </p>
 </Box>
 
 
