--- a/src/pages/en/tutorial/2-pages/5.mdx
+++ b/src/pages/en/tutorial/2-pages/5.mdx
@@ -7,6 +7,7 @@ description: |-
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
+import Spoiler from '~/components/Spoiler.astro';
 import Box from '~/components/tutorial/Box.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
@@ -108,19 +109,27 @@ Your About page is now styled using *both* the imported `global.css` file *and* 
 
 - Are styles from both styling methods being applied? 
 
-    || Yes ||
+    <p>
+      <Spoiler>Yes</Spoiler>
+    </p>
 
 - Are there any conflicting styles, and if so, which are applied?
 
-    || Yes, h1 has a size of 2.5rem globally, but 4rem locally in the <style> tag. The local 4rem rule is applied on the About page. ||
+    <p>
+      <Spoiler>Yes, h1 has a size of 2.5rem globally, but 4rem locally in the `<style>` tag. The local 4rem rule is applied on the About page.</Spoiler>
+    </p>
 
 - Describe how `global.css` and `<style>` work together.
 
-    || When conflicting styles are defined both globally and in a page's local <style> tag, the local styles should overwrite any global styles. (But, there can be other factors involved, so always visually inspect your site to make sure your styles are properly applied!)  ||
+    <p>
+      <Spoiler>When conflicting styles are defined both globally and in a page's local `<style>` tag, the local styles should overwrite any global styles. (But, there can be other factors involved, so always visually inspect your site to make sure your styles are properly applied!)</Spoiler>
+    </p>
 
 - How would you choose whether to declare a style in a `global.css` file or a `<style>` tag?
 
-    || If you want a style to be applied site-wide, you would choose to use a global.css file. However, if you want styles to apply to only the HTML content in a single Astro file, and not affect other elements on your site, you would choose a <style> tag. ||
+    <p>
+      <Spoiler>If you want a style to be applied site-wide, you would choose to use a global.css file. However, if you want styles to apply to only the HTML content in a single Astro file, and not affect other elements on your site, you would choose a `<style>` tag.</Spoiler>
+    </p>
 
 </Box>
 
