Update Nuxt and Astro comparison code

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -5,7 +5,7 @@ layout: ~/layouts/MigrationLayout.astro
 stub: false
 framework: NuxtJS
 ---
-import AstroJSXTabs from '~/components/tabs/AstroJSXTabs.astro'
+import AstroVueTabs from '~/components/tabs/AstroVueTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [NuxtJS](https://nuxtjs.org) is a framework for building web applications on top of Vue.
@@ -32,44 +32,36 @@ When you rebuild your Nuxt site in Astro, you will notice some important differe
 
 - [Page Routing](/en/core-concepts/astro-pages/#file-based-routing): Nuxt uses `vue-router` for SPA routing, and `vue-meta` for managing `<head>`. In Astro, you will create separate HTML page routes and control your page `<head>` directly, or in a layout component.
 
-- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. An existing Nuxt app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
+- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. While Nuxt has the capability to do content-focused sites through `@nuxt/content`, it's primarily geared towards interactive websites. This differs from Astro, which has built-in capabilities for content page generation, but may be difficult to replicate interactive components such as dashboards within.
 
 ## Convert your Project
 
-### Get Started with Astro
+### Create a new Astro project
 
-- Option 1: **Create a new Astro project** 
+Use `npm create astro@latest` to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
 
-  Use `npm create astro@latest` to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
-  
-  
-  You can also pass a `--template` argument to the `create-astro` command to start from an existing Astro repository on GitHub:
 
-    <PackageManagerTabs>
-      <Fragment slot="npm">
-      ```shell
-      npm create astro -- --template <github-username>/<github-repo>
-      ```
-      </Fragment>
-      <Fragment slot="pnpm">
-      ```shell
-      pnpm create astro --template <github-username>/<github-repo>
-      ```
-      </Fragment>
-      <Fragment slot="yarn">
-      ```shell
-      yarn create astro --template <github-username>/<github-repo>
-      ```
-      </Fragment>
-    </PackageManagerTabs>
-  
-  Then, copy your existing Nuxt project files over to your new Astro project in a separate folder outside of `src`.
+You can also pass a `--template` argument to the `create-astro` command to start from an existing Astro repository on GitHub:
 
-- Option 2: **Update your existing Nuxt project dependencies**
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template <github-username>/<github-repo>
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template <github-username>/<github-repo>
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template <github-username>/<github-repo>
+    ```
+    </Fragment>
+  </PackageManagerTabs>
 
-  Remove any Nuxt or Vue-related dependencies in `package.json` and follow all the steps to [install Astro manually](/en/install/manual/) in your existing repository. (You may wish to do this on a different branch.) 
-  
-  Make sure you have [these project files](/en/install/manual/#7-next-steps) and a working home page before continuing. 
+Then, copy your existing Gatsby project files over to your new Astro project into a separate folder outside of `src`.
 
 :::tip
 Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox or Gitpod.
@@ -87,11 +79,11 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 ### Put your source code in `src`
 
-1. **Keep** Nuxt's `public/` folder untouched. 
+1. **Move** Nuxt's `static/` folder to `public/`. 
    
-    Astro uses the `public/` directory for static assets, just like Nuxt. There is no change needed to this folder, nor its contents.
+    Astro uses the `public/` directory for static assets, similar to Nuxt's `static/` folder.
 
-2. **Copy or Move** Nuxt's other files and folders (e.g. `pages`, `styles` etc.) into Astro's `src/` folder.
+2. **Copy or Move** Nuxt's other files and folders (e.g. `pages`, `layouts` etc.) into Astro's `src/` folder.
 
     Like Nuxt, Astro's `src/pages/` folder is a special folder used for file-based routing. All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, `src/scripts`.
 
@@ -104,15 +96,15 @@ Astro has a configuration file at the root of your project called [`astro.config
 
 Here are some tips for converting a Nuxt `.vue` component into a `.astro` component:
 
-1. Use the returned JSX of the existing NuxtJS component function as the basis for your HTML template.
+1. Use the `<template>` of the existing NuxtJS component function as the basis for your HTML template.
 
-2. Change any [Nuxt or JSX syntax to Astro](#convert-nuxtjs-syntax-to-astro) (e.g. `<Link>`, `<Script>`, `{children}`, `className`, inline style objects) or to HTML web standards.
+2. Change any [Nuxt or Vue syntax to Astro](#convert-nuxtjs-syntax-to-astro) (e.g. `<NextLink>`, `:class`, `{{variable}}`, `v-if`) or to HTML web standards.
 
-1. Move any necessary JavaScript, including import statements, into a "code fence" (`---`). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-components/#dynamic-html) is often written inside the HTML template directly in Astro.
+1. Move `<script>` JavaScript, into a "code fence" (`---`).
 
-4. Write an `Astro.props` statement to access any additional props that were previously passed to your Gatsby function.
+4. Write an `Astro.props` statement to access any additional props that were previously passed to your Vue component.
 
-4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
+4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing Vue components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 
 See [an example from a Nuxt app converted step-by-step](#examples-from-nuxtjs).
 
@@ -120,47 +112,46 @@ See [an example from a Nuxt app converted step-by-step](#examples-from-nuxtjs).
 
 Compare the following Nuxt component and a corresponding Astro component:
 
-<AstroJSXTabs>
-  <Fragment slot="jsx">
-    ```jsx title="Page.jsx"
-    import Header from "./header";
-    import Footer from './footer';
-    import "./layout.css";
+<AstroVueTabs>
+  <Fragment slot="vue">
+    ```vue title="Page.vue"
+    <template>
+      <div>
+        <p v-if="message === 'Not found'">
+          The repository you're looking up doesn't exist
+        </p>
+        <div v-else>
+          <Header/>
+          <p class="banner">Astro has {{stars}} 🧑‍🚀</p>
+          <Footer />
+        </div>
+      </div>
+    </template>
 
-    export async function getStaticProps() {
+    <script>
+    import Vue from 'vue'
+    
+    export default Vue.extend({
+      name: 'IndexPage',
+      async asyncData() {
         const res = await fetch('https://api.github.com/repos/withastro/astro')
-        const json = await res.json()
+        const json = await res.json();
         return {
-            props: {
-                message: json.message,
-                stars: json.stargazers_count || 0,
-            },
-        }
+          message: json.message,
+          stars: json.stargazers_count || 0,
+        };
+      }
+    });
+    </script>
+    
+    <style scoped>
+    .banner {
+      background-color: #f4f4f4;
+      padding: 1em 1.5em;
+      text-align: center;
+      margin-bottom: 1em;
     }
-    
-    const Component = ({
-        stars,
-        message,
-    }) => {
-        if (message === "Not Found") return (
-            <p>The repository you're looking up doesn't exist</p>
-        )
-    
-        return (
-            <>
-                <Header />
-                <p style={{
-                    backgroundColor: `#f4f4f4`,
-                    padding: `1em 1.5em`,
-                    textAlign: `center`,
-                    marginBottom: `1em`
-                }}>Astro has {stars} 🧑‍🚀</p>
-                <Footer />
-            </>
-        )
-    }
-    
-    export default Component;
+    <style>
     ```
   </Fragment>
   <Fragment slot="astro">
@@ -195,7 +186,7 @@ Compare the following Nuxt component and a corresponding Astro component:
     <style>
     ```
   </Fragment>
-</AstroJSXTabs>
+</AstroVueTabs>
 
 ### Migrating Layout Files
 
@@ -287,13 +278,13 @@ See Astro's [testing guide](/en/guides/testing/) for more.
 
 ## Reference: Convert NuxtJS Syntax to Astro
 
-### Variable Interpolation
+### Nuxt Variable Interpolation to Astro
 
-<!-- TODO: This -->
+{/* TODO: Update this */}
 
 Don't use `{{}}`. Instead just use `{}` for expressions
 
-### Property Passing
+### Nuxt Property Passing to Astro
 
 Instead of `v-bind:attr="jsVar"` or `:attr="jsVar"`, use `attr={jsVar}` 
 
@@ -334,21 +325,35 @@ Just like Vue has slots to pass children to a component, Astro components do as 
 
 See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-components/#slots).
 
+### Nuxt Dynamic Page Generation to Astro
+
+{/* TODO: Update this */}
+
+`getStaticPaths` is `generate`, does not live alongside `pages` component, but rather the `config` file:
+
+- https://nuxtjs.org/docs/configuration-glossary/configuration-generate/
+
 ### Nuxt Data Fetching to Astro
 
-<!-- TODO: Update this to mention `asyncData` -->
+{/* TODO: Update this */}
 
-Convert any instances of `getStaticProps()` to `Astro.glob()` to access data from other files in your project source. To fetch external data, use `fetch()`. These data requests are made in the frontmatter of the Astro component using the data, and use top-level await.
+Nuxt has two methods of generating data:
+
+- [`asyncData` options API](https://nuxtjs.org/docs/features/data-fetching/#async-data) akin to `getStaticProps`
+- [`fetch` hook](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook) which loads data either on client or server (no 1:1 match)
 
 See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob).
 
 ### Nuxt Styling to Astro
 
-<!-- TODO: Update this -->
+{/* TODO: Update this */}
 
-Convert any inline style objects (`style = {{fontWeight: "bold", }}`) to inline HTML style attributes (`style="font-weight:bold;"`). Or, use an Astro `<style>` tag for scoped CSS styles. Import `.css` files directly into a main layout component to achieve global styles.
+`<style>` is default `scoped` in Astro
 
-You may also need to replace any CSS-in-JS libraries (e.g. styled components) with other available CSS options in Astro.
+Nuxt2 has SASS support:
+
+- https://nuxtjs.org/docs/configuration-glossary/configuration-css/
+- Seems like others supported via Webpack
 
 See more about [Styling in Astro](/en/guides/styling/).
 
@@ -368,7 +373,9 @@ This walks through converting three individual files to `.astro` files:
 - `pages/index.vue` Pokemon list page becomes `src/pages/index.astro`
 - `pages/pokemon/_name.js` for dynamic routing becomes `src/pages/[name].astro`
 
-<!-- TODO: Add steps -->
+{/* TODO: Add steps */}
+
+{/* TODO: Add a `@nuxt/content` example? */}
 
 ## Community Resources 
 
