--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -190,14 +190,9 @@ Compare the following Nuxt component and a corresponding Astro component:
 
 ### Migrating Layout Files
 
-You may find it helpful to start by converting your NuxtJS layouts and templates into Astro layout components.
+In Astro, your layout must include a full page shell (`<html>`, `<head>` and `<body>` tags). Your Nuxt `layout.vue` and templates will not include these. 
 
-Next has two different methods for creating layout files, each of which handles layouts differently than Astro:
-
-- The `pages` directory
-
-
-Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Astro uses a `<slot />` for page content, with no import statement required. Note the standard HTML templating, and direct access to `<head>`:  
+You can use the following code to provide these extra elements around an existing Nuxt layout file, or write your own:
 
 ```astro title="src/layouts/Layout.astro"
 ---
@@ -216,43 +211,7 @@ Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be 
 </html>
 ```
 
-Your Next project may have a `pages/_document.jsx` file that imports React components to customize your app's `<head>`:
-
-```jsx title="pages/_document.jsx"
-import Document, { Html, Head, Main, NextScript } from "next/document";
-
-export default class MyDocument extends Document {
-  render() {
-    return (
-      <Html lang="en">
-        <Head>
-          <link rel="icon" href="/favicon.ico" />
-        </Head>
-        <body>
-          <Main />
-          <NextScript />
-        </body>
-      </Html>
-    );
-  }
-}
-```
-
-1. Make a new Astro layout file using only the returned JSX.
-
-2. Replace any React components with `<html>`, `<head>`, `<slot>`, and other HTML standard tags.
-
-
-```astro title="src/layouts/Document.astro"
-<html lang="en">
-	<head>
-	    <link rel="icon" href="/favicon.ico" />
-	</head>
-	<body>
-		<slot/>
-	</body>
-</html>
-```
+You may also wish to reuse code from [your Nuxt's page's `head` property](https://nuxtjs.org/docs/configuration-glossary/configuration-head/#the-head-property) to include additional site meta data. Notice that Astro uses neither `vue-meta` nor a component's `head` property but instead accesses `<head>` directly. You may create and import components, even within `<head>`, to separate and organize your page content.
 
 ### Migrating Pages and Posts
 
