Migrate MDX/Posts/Tests sections

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -215,23 +215,23 @@ You may also wish to reuse code from [your Nuxt's page's `head` property](https:
 
 ### Migrating Pages and Posts
 
-In Next.js, your posts either live in `/pages` or `/app/routeName/page.jsx`.
+In NuxtJS, your posts live in `/pages`. In Astro, **all your page content must live within `src/`**.
 
-In Astro, **your pages must live within `src/pages/`**. You will not have to configure any routing behavior for your Astro, Markdown and MDX files.
+#### Vue Pages
 
-#### Vue pages
+Your existing Nuxt Vue (`.vue`) pages will need to be [converted from Vue files to `.astro` pages](#convert-vue-files-to-astro-files). You cannot use an existing Vue page file in Astro.
 
-Your existing Nuxt JSX (`.vue`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files).
+These `.astro` pages must be located within `src/pages/` and will have page routes generated automatically based on their file path.
 
 #### Markdown and MDX pages
 
-Next.js has no built-in support for Markdown and an optional integration for MDX files. If your existing project contains Markdown or MDX files, you no longer need to manually create pages for each Markdown-generated route. However, your existing Markdown and MDX pages may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts).
+Astro has built-in support for Markdown and an optional integration for MDX files. You can reuse any existing Markdown and MDX pages, but they may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). You will no longer need to manually create pages for each Markdown-generated route or use an external package like `@nuxt/content`. These files can be placed within `src/pages/` to take advantage of automatic file-based routing.
 
-With dynamic routing, your Markdown posts may exist outside of `src/pages/` but they should still be kept within your project source folder (e.g. `src/posts/`) so that the dynamic page file (e.g. `src/pages/blog/[slug].astro` can import their data.)
+When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
 
 ### Migrating Tests
 
-As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box, if you have been able to match the markup of your Next site. Testing libraries such as Jest and React Testing Library can be imported and used in Astro to test your React components.
+As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box, if you have been able to match the markup of your Nuxt site. Testing libraries such as Jest and Vue Testing Library can be imported and used in Astro to test your Vue components.
 
 See Astro's [testing guide](/en/guides/testing/) for more.
 
