Migrate variable interpolation and property passing

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -239,13 +239,38 @@ See Astro's [testing guide](/en/guides/testing/) for more.
 
 ### Nuxt Variable Interpolation to Astro
 
-{/* TODO: Update this */}
+A Nuxt Vue component might have the following to display a variable within a paragraph tag:
 
-Don't use `{{}}`. Instead just use `{}` for expressions
+```vue title="components/Component.vue"
+<p>{{message}}</p>
+```
+
+To interpolate a variable in an Astro component, change the set of two curly braces to one set of curly braces:
+
+```astro title="src/components/Component.astro"
+<p>{message}</p>
+```
 
 ### Nuxt Property Passing to Astro
 
-Instead of `v-bind:attr="jsVar"` or `:attr="jsVar"`, use `attr={jsVar}` 
+
+To bind a property to an attribute or component in Vue, you'd do the following:
+
+```vue title="components/Component.vue"
+<p v-bind:aria-label="message">...</p>
+<!-- Or -->
+<p :aria-label="message">...</p>
+<!-- Also support component props -->
+<Header title="Page"/>
+```
+
+To bind an attribute or component property in an Astro component, change this syntax to the following:
+
+```astro title="src/components/Component.astro"
+<p aria-label={message}>...</p>
+<!-- Also support component props -->
+<Header title={"Page"}/>
+```
 
 ### Nuxt Links to Astro
 
